@@ -151,7 +151,6 @@ add_subdirectory (src)
 add_subdirectory (src/commands)
 add_subdirectory (src/columns)
 add_subdirectory (doc)
-add_subdirectory (i18n)
 add_subdirectory (scripts)
 if (EXISTS ${CMAKE_SOURCE_DIR}/test)
   add_subdirectory (test EXCLUDE_FROM_ALL)
