@@ -1,5 +1,0 @@
-%
-erster Tipp
-%
-zweiter Tipp
-%
