@@ -1,69 +1,0 @@
-%
-For bash users, try 'alias t=task' to save some keystrokes.
-%
-Have you tried 'task 1 edit' to use your text editor to modify all aspects of
-task 1?
-%
-Did you know that 'task 1 wait:eom' will hide task 1 until the end of the
-month?  You can then see all waiting tasks with 'task waiting'.
-%
-Did you know that 'task 1 wait:' will restore a waiting task to pending status?
-%
-If you put 'default.command=list project:home' in your .taskrc file, then just
-running 'task' will automatically run 'task list project:home' for you.  Save
-some keystrokes!
-%
-If you edit your pending.data file, make sure that your text editor doesn't
-strip the trailing \n characters from the end of the file.
-%
-If you must edit your pending.data file, make sure that your text editor doesn't
-convert from a Unix to a DOS file encoding.
-%
-Do you have the latest version of task installed?  Check http://taskwarrior.org
-periodically for news of updates.  That feature you wanted might be ready...
-%
-Don't forget the online docs at http://taskwarrior.org/wiki/taskwarrior, and if
-you find errors, please let us know.  Then again, it is a wiki, so feel free to
-correct them yourself.
-%
-Don't forget the online docs at http://taskwarrior.org/wiki/taskwarrior, but if
-you cannot find documentation on a particular topic, either create a ticket
-requesting it, email support@taskwarrior.org asking for it, or start it
-yourself.
-%
-Did you know there are man pages for task?  Try 'man task', 'man taskrc',
-'man task-color' and 'man task-sync'.
-%
-Did you know there are several 256-color themes available for task?
-%
-Did you know that running 'task show' will perform various checks on your
-.taskrc file, looking for errors?
-%
-Are you making the most of color?  Try 'task color' to see what colors your
-system supports.
-%
-Are you using projects?  If you do, taskwarrior will keep track of the project
-completion percentage and report it to you whenever it changes.
-%
-Did you know you can list tasks that have priorities like 'task list
-priority.above:L'?
-%
-The http://tasktools.org/latest URL can tell you which is the latest version.
-%
-To make your task list clear and actionable, always describe it starting with a
-verb, like "call" or "clean" or "get".
-%
-Don't like the name of a command?  Create an alias.
-%
-You can choose whether your searches are case sensitive or not, by running
-'task config search.case.sensitive yes'
-%
-Back up your data files by making copies of the ~/.taskrc file and ~/.task
-directory.
-%
-Accidentally changed a task? The undo command makes it a breeze to recover from
-any inadvertent change -- even a deletion!
-%
-Want to see a list of all changes you have made to a task?  The info report will
-display a complete change history.
-%
