@@ -1,72 +1,0 @@
-%
-Para usuarios de bash, pruebe 'alias t=task' para ahorrarse algo de tecleo.
-%
-¿Ha probado 'task 1 edit', que permite usar su editor para modificar cualquier
-aspecto de la tarea 1?
-%
-¿Sabía que 'task 1 wait:eom' ocultará la tarea 1 hasta final de mes? Puede ver
-todas las tareas en espera con 'task waiting'.
-%
-¿Sabía que 'task 1 wait:' restaurará el estatus de una tarea en espera a
-pendiente?
-%
-Si pone 'default.command=list project:home' en su fichero .taskrc, lanzando
-simplemente 'task' se ejecutará automáticamente 'task list project:home'.
-¡Ahorre algo de tecleo!
-%
-Si edita su fichero pending.data asegúrese de que su editor no elimina los
-caracteres \n al final del archivo.
-%
-Si tiene que editar su fichero pending.data asegúrese de que su editor no
-transforma la codificación Unix en DOS.
-%
-¿Tiene instalada la última versión de task? Compruebe http://taskwarrior.org
-periódicamente en busca de noticias y actualizaciones. Esa característica que
-quería puede estar lista...
-%
-No olvide la documentación en línea en http://taskwarrior.org/wiki/taskwarrior,
-y si encuentra errores, por favor, háganoslo saber. Por otra parte, se trata de
-una wiki, así que siéntase libre de corregirlos usted mismo.
-%
-No olvide la documentación en línea en http://taskwarrior.org/wiki/taskwarrior,
-pero si no puede encontrar información sobre algo en particular, cree un ticket
-solicitándola, escriba a support@taskwarrior.org pidiéndola o empiécela usted
-mismo.
-%
-¿Sabía que hay páginas de manual para task? Pruebe 'man task', 'man taskrc',
-'man task-sync', y 'man task-color'.
-%
-¿Sabía que hay varios temas en 256 colores disponibles para task?
-%
-¿Sabía que al ejecutar 'task show' se llevarán a cabo varias comprobaciones
-en su fichero .taskrc, buscando errores?
-%
-¿Está sacando lo mejor del color? Pruebe 'task color' para ver que colores
-soporta su sistema.
-%
-¿Está usando proyectos? Si lo hace, taskwarrior hará un seguimiento del
-porcentaje de finalización del proyecto y le informará cada vez que cambie.
-%
-¿Sabía que puede listar las tareas que tienen prioridad, como 'task list
-priority.above:L'?
-%
-El URL http://tasktools.org/latest puede decirle cual es la versión mas
-reciente.
-%
-Para que las tareas en su lista sean claras y aplicables, descríbalas siempre
-con un verbo al principio, como "llamar" o "limpiar" o "conseguir".
-%
-¿No le gusta el nombre de un comando? Cree un alias.
-%
-Puede elegir si sus búsquedas son sensibles a la diferencia entre mayúsculas y
-minúsculas o no, ejecutando 'task config search.case.sensitive yes' .
-%
-Resguarde sus ficheros de datos haciendo copias del archivo ~/.taskrc y del
-directorio ~/.task .
-%
-¿Ha cambiado una tarea sin querer? El comando undo hace inmediato recuperarse
-de cualquier cambio no deseado -- ¡incluso un borrado!
-%
-¿Quiere ver una lista de todos los cambios que a hecho en una tarea? El informe
-info mostrará una historia completa de cambios.
-%
