@@ -1,76 +1,0 @@
-%
-Si vous utilisez bash, essayez 'alias t=task' pour économiser quelques
-frappes de clavier.
-%
-Avez-vous essayé 'task 1 edit' pour modifier n'importe quel aspect de
-la tâche 1 à l'aide de votre éditeur de texte ?
-%
-Saviez-vous que 'task 1 wait:eom' permet de masquer la tâche 1 jusqu'à
-la fin du mois ?  Vous pouvez alors voir toutes les tâches différées
-avec 'task waiting'.
-%
-Saviez-vous que 'task 1 wait:' permet de restaurer une tâche de l'état
-différée à imminente ?
-%
-Si vous avez mis 'default.command=list project:maison' dans votre
-fichier .taskrc, alors quand vous exécuterez la commande 'task' seule,
-cela exécutera automatiquement 'task list project:maison' pour vous.
-Épargnez vous quelques frappes de clavier !
-%
-Si vous modifiez votre fichier pending.data, faites attention à ce que
-votre éditeur de texte ne supprime les caractères \n situés à la fin.
-%
-Si vous modifiez votre fichier pending.data, faites attention à ce que
-votre éditeur de texte ne change pas son encodage de Unix à DOS.
-%
-Avez-vous la dernière version de task installée ?  Suivez les annonces
-de nouvelles versions à http://taskwarrior.org.  La fonctionnalité
-que vous voulez est peut-être disponible...
-%
-N'oubliez pas les documentations en ligne à
-http://taskwarrior.org/wiki/taskwarrior, et si vous trouvez des
-erreurs, faites le nous savoir s'il vous plaît.  Encore une fois,
-c'est un wiki, alors n'hésitez pas à corriger par vous-même.
-%
-N'oubliez pas les documentations en ligne à
-http://taskwarrior.org/wiki/taskwarrior, mais si vous ne trouvez pas
-de documentation sur un sujet particulier, vous pouvez soit créer un
-ticket pour en demander, soit la demander à supporte@taskwarrior.org
-ou encore commencer à l'écrire vous-même.
-%
-Saviez-vous qu'il y a des pages man pour task ?  Essayez 'man task',
-'man taskrc', 'man task-sync' et 'man task-color'.
-%
-Saviez-vous qu'il y a de nombreux jeux de couleurs disponibles pour
-task ?
-%
-Saviez-vous que 'task show' permet de vérifier votre fichier .taskrc ?
-%
-Vous êtes sensible aux couleurs ?  Essayez 'task color' pour voir les
-couleurs supportées par votre système.
-%
-Vous fonctionnez par projets ?  task tient à jour un pourcentage
-d'accomplissement de chaque projet et vous prévient quand il change.
-%
-Saviez-vous que vous pouvez lister les tâches ayant une certaine
-priorité avec 'task list priority.above:L' ?
-%
-L'URL http://tasktools.org/latest vous indique la dernière version de task.
-%
-Pour rendre vos tâches claires et plus concrètes, décrivez les
-toujours en commençant par un verbe, comme "appeler" ou "écrire".
-%
-Vous n'aimez pas le nom d'une commande ?  Créez un alias !
-%
-Vous voulez que vos recherches soient insensibles à la casse ?
-Exécutez la commande 'task config search.case.sensitive no'
-%
-Sauvegardez vos données en copiant le fichier ~/.taskrc et le
-répertoire ~/.task !
-%
-Vous avez accidentellement modifié une tâche ?  La commande 'undo'
-vous permet d'annuler tout changement, même une suppression de tâche.
-%
-Vous voulez voir une liste des changements que vous avez fait à vos
-tâches ? La commande 'info' vous affichera un historique complet.
-%
