@@ -1,59 +1,0 @@
-%
-Se usi bash, puoi digitare qualche carattere in meno con 'alias t=task'.
-%
-Hai provato 'task 1 edit' per modificare tutti gli aspetti del task 1 con il tuo
-editor preferito!
-%
-Lo sapevi che con 'task 1 wait:eom' puoi nascondere il task 1 fino alla fine del
-mese? Per listare tutti i task in attesa, usa 'task waiting'.
-%
-Lo sapevi che con 'task 1 wait:' puoi togliere un task dallo stato di attesa?
-%
-Se aggiungi la linea 'default.command=list project:home' al tuo file .taskrc,
-invocando 'task' invocherà automaticamente 'task list project:home' per te.
-Digita qualche carattere in meno!
-%
-Se editi il tuo file pending.data manualmente, assicurati che il tuo editor non
-rimuova il carattere \n alla fine del file.
-%
-Sei sicuro che la versione di task installata sia la più recente? Controlla
-periodicamente http://taskwarrior.org per novità e aggiornamenti: la
-funzionalità che aspettavi potrebbe essere pronta!
-%
-Non dimenticarti della documentazione online su
-http://taskwarrior.org/wiki/taskwarrior. Se trovi degli errori, puoi
-comunicarcelo o correggerli da te: è una wiki!
-%
-Lo sapevi che esistono le pagine del manuale di task? Prova con 'man task', 'man
-taskrc', 'man task-sync' e 'man task-color'.
-%
-Lo sapevi che ci sono svariati temi a 256 colori disponibili per task?
-%
-Lo sapevi che invocando 'task show' vengono eseguiti svariati controlli sul tuo
-file .taskrc e che alla fine viene presentato un report con gli errori?
-%
-Stai sfruttando al massimo i colori a tua disposizione? Prova ad invocare 'task
-color' per vedere i colori supportati dal tuo sistema.
-%
-Usi la funzionalità di task legata ai progetti? Se sì, taskwarrior tiene traccia
-del livello di completamento dei tuoi progetti e te lo notifica quando cambia.
-%
-Lo sapevi che puoi listare i tasks prioritari con un comando come 'task list
-priority.above:L'?
-%
-Hai la versione più aggiornata? Controllalo su http://tasktools.org/latest!
-%
-In una lista di task chiara e concisa le azioni iniziano sempre con un verbo,
-come "chiama", "pulisci", o "compera".
-%
-Non ti piace il nome di un comando? Crea un alias!
-%
-Puoi scegliere se le tue ricerche devono essere portate a termine in modo
-case-sensitive o meno, invocando 'task config search.case.sensitive [yes|no]'
-%
-Per fare un backup completo dei tuoi task è sufficiente fare una copia del file
-~/.taskrc e della directory ~/.task.
-%
-Hai modificato accidentalmente un task? Con il comando 'undo' è facile
-ripristinare un task -- anche dopo una cancellazione!
-%
