@@ -1,70 +1,0 @@
-%
-bashユーザーなら、'alias t=task'としてキー入力を減らしてみてください。
-%
-'task 1 edit'とすると、タスク1のあらゆる要素をテキストエディタで編集
-できます。試してみましたか？
-%
-'task 1 wait:eom'とすると、月末までタスク1を隠す（待機させる）ことが
-できます。「待機」させたタスクは、'task waiting'で表示できます。
-%
-'task 1 wait:'で、待機状態のタスクを pending ステータスに変更できます。
-%
-設定ファイル .taskrc に 'default.command=list project:home' と書くと、
-単に 'task' を実行するだけで、自動的に 'task list project:home' した
-のと同じことになります。これでキー入力数を減らせますね！
-%
-もしpending.dataファイルを編集するなら、テキストエディタにファイル
-末尾にある、連続した \n 文字を勝手に削除させないようにしてください。
-%
-もしpending.dataファイルを編集するなら、テキストエディタが改行
-文字を勝手にUnixスタイルからDOSスタイルに変更しないように設定
-してください。
-%
-お使いのtaskは最新版ですか？　 http://taskwarrior.org/を定期的に
-確認し、アップデート情報を確認してください。この機能はいずれ実装
-されるかもしれません……。
-%
-オンラインにあるドキュメント http://taskwarrior.org/wiki/taskwarrior
-をお忘れなく。もし間違いを見つけたらお知らせください。ただ、これは
-wikiなので、ご自身で直して頂くことも可能です。
-%
-オンラインにあるドキュメント http://taskwarrior.org/wiki/taskwarrior
-をお忘れなく。ただ、必要な情報が見つからないかもしれません。そうした
-場合は、チケットでリクエストするか、support@taskwarrior.org にeメール
-で相談してください。
-%
-taskにはmanページがあります。'man task'、'man taskrc'、
-'man task-turorial'、'man task-color' が利用できます。
-%
-taskでは256色の色表示が可能です。ご存じでしたか？
-%
-'task show'を使っていますか？　これを使うことで、お使いの .taskrc
-ファイルに問題がないかを、様々な形でチェックできます。
-%
-もっと多くの色を利用したいですか？　'task color'を試してください。
-システム上でサポートされている各種カラー指定を表示します。
-%
-プロジェクト機能を使っていますか？　これを使えば、taskwarriorによる
-進捗率管理や、レポートを随時確認することができます。
-%
-一定の優先度のタスクのみ表示する場合、次のようにしてください。
-'task list priority.above:L'?
-%
-http://tasktools.org/latest というURLに、最新版が準備されています。
-%
-タスクリストを明確かつ「するべきこと」が分かるようにするために、
-動詞から書き出しましょう。「電話をかける：どこどこへ」「整理する」
-「調べる」といった形で。
-%
-コマンドの名前が気に入らない？　エイリアスを設定しましょう。
-%
-検索時、大文字小文字を区別するかどうかは任意に指定できます。
-'task config search.case.sensitive yes'で区別できます。
-%
-データファイルのバックアップを行う場合、~/.taskrcファイルと、
-~/.task ディレクトリを対象にしてください。
-%
-間違えてタスクを変更してしまったら？　undoコマンドを使うことで、
-あらゆる操作を一つ前に戻すことができます。もちろん削除もです！
-%
-
