@@ -1,75 +1,0 @@
-%
-Se é utilizador da shell bash, use 'alias t=task' para reduzir o número de
-teclas a usar.
-%
-Já experimentou 'task 1 edit' para usar o seu editor de texto e modificar
-detalhes da tarefa 1?
-%
-Sabia que o comando 'task 1 wait:eom' irá esconder a tarefa 1 até ao fim do
-mês?  Pode consultar todas as tarefas em espera com 'task waiting'.
-%
-Sabia que o comando 'task 1 wait:' irá restaurar uma tarefa em espera para o
-estado pendente?
-%
-Se adicionar 'default.command=list project:home' ao seu ficheiro .taskrc, da
-próxima vez que executar o comando 'task' será automaticamente transformado em
-'task list project:home'. Poupe algumas teclas.
-%
-Se editar o ficheiro pending.data, certifique-se que o seu editor de texto não
-remove os caracteres \n do fim do ficheiro.
-%
-Se editar o ficheiro pending.data, certifique-se que o seu editor de texto não
-converte o ficheiro de codificação Unix para DOS.
-%
-Tem a última versão do taswarrior instalado?  Visite http://taskwarrior.org
-periodicamente para notícias e atualizações.  Aquela funcionalidade que tanto
-deseja pode já estar disponível...
-%
-Não se esqueça da documentação online: http://taskwarrior.org/wiki/taskwarrior,
-e se encontrar erros, por favor informe-nos.  Por outro lado, a documentação é
-um wiki, por isso sinta-se à vontade para os corrigir você mesmo.
-%
-Não se esqueça da documentação online: http://taskwarrior.org/wiki/taskwarrior,
-mas se não conseguir encontrar informação num determinado tópico, abra uma
-tarefa com o pedido, envie um email para support@taskwarrior.org ou crie o
-tópico você mesmo.
-%
-Sabia que existem "man pages" para o task?  Experimente 'man task', 'man taskrc',
-'man task-sync' e 'man task-color'.
-%
-Sabia que há vários temas de 256 cores disponíveis para o task?
-%
-Sabia que ao executar 'task show' várias verificações serão feitas no ficheiro
-.taskrc a fim de identificar erros?
-%
-Está a tirar o maior partido das cores? Experimente 'task color' para
-identificar as cores que o seu sistema suporta.
-%
-Está a usar projetos?  Se usar, o taskwarrior irá manter registo da percentagem
-de conclusão do projeto e irá reportar quando esta muda.
-%
-Sabia que pode listar tarefas que tenham prioridades usando comandos como 'task
-list priority.above:L'?
-%
-O endereço http://tasktools.org/latest indica-lhe qual a versão mais recente
-disponível.
-%
-Para tornar a sua lista de tarefas mais clara e fácil de concluir, descreva as
-suas tarefas começando com um verbo, por exemplo: "Escrever", "Fazer",
-"Comprar".
-%
-Não gosta do nome do comando? Crie uma alcunha (alias).
-%
-Pode escolher se as suas pesquisas são sensíveis a maiúsculas/minúsculas
-configurando 'task config search.case.sensitive yes'
-%
-Pode fazer uma cópia de segurança das suas tarefas copiando o ficheiro .taskrc
-e o diretório ~/.task.
-%
-Fez uma mudança acidental a uma tarefa? Use o comando 'task undo' para voltar
-atrás. Pode retroceder qualquer mudança até mesmo se eliminou uma tarefa!
-%
-Quer ver todas as modificações que fez a uma tarefa?  O comando 'info' permite
-mostrar todos os detalhes de uma ou mais tarefas, incluindo o histórico de
-alterações.
-%
