@@ -176,6 +176,7 @@
 - Esperanto localization (thanks to Jeremy John Reeder).
 - The 'total active time' information is removed from the 'info' report.  This
   was being misinterpreted as support for time tracking.
+- Removed unused tips files (thanks to dev-zero).
 
 ------ current release ---------------------------
 
